add sentinel run fetches
